Added intr and answered some questions

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I've found a good balance between being in outdoorsy mode and geeking out on the computer. I have been known to attend a zoom meeting, or twom from my hammock.  I have a very varied work history, ranging from youth counselor, IT monkey, kayak instructor, VOIP installer, wide are network manager and lastly working in a QA/SDET capacity. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Virginia Beach, VA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Kayaking/Canoeing/SUPs...I love to paddle.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owner/Operator of a 2 Bay Hydroponic Farm</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Durham, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Due to an interesting set of circumstances, I found myself in a software engineering role.  While I have a bit of backend expereience, with python and psql db's, my front end knowledge is woefully lacking.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://github.com/caldwell-bob">Github</a></li>
         </ul>
     </footer>
 </body>
