--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I've found a good balance between being in outdoorsy mode and geeking out on the computer. I have been known to attend a zoom meeting, or twom from my hammock.  I have a very varied work history, ranging from youth counselor, IT monkey, kayak instructor, VOIP installer, wide are network manager and lastly working in a QA/SDET capacity. </p>
+      <p>I've found a good balance between being in outdoorsy mode and geeking out on the computer. I have been known to attend a zoom meeting, or two from my hammock.  I have a varied work history, ranging from outdoor youth counselor, IT monkey, kayak instructor, VOIP installer, wide are network manager and lastly working in a QA/SDET capacity. </p>
       <h1>Where I'm From</h1>
       <p>Virginia Beach, VA</p>
       <h1>What are your favorite hobbies?</h1>
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Durham, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Due to an interesting set of circumstances, I found myself in a software engineering role.  While I have a bit of backend expereience, with python and psql db's, my front end knowledge is woefully lacking.</p>
+      <p>Due to an interesting set of circumstances, I found myself in a software engineering role.  While I have a bit of backend expereience, with python and psql db's, and an array of Automation Frameworks, all using Selenium Webdriver, my overall front end knowledge is woefully lacking.</p>
     </section>
 
     <footer id="footer">
